--- a/index.html
+++ b/index.html
@@ -378,19 +378,19 @@
     <div class="col-md-5 twenty">
       <p><a href="https://docs.google.com/presentation/d/1GMoBxAc1YytVVwHm_TnairZSRW0N9U1E/edit#slide=id.p6" target="_blank">作業05</a> (20%)</p>
       <hr>
-      <p>作業五倉儲 <a href="https://github.com/winnie430/ca2024fhw06/">https://github.com/winnie430/ca2024fhw05/</a></p>
+      <p>作業五倉儲 <a href="https://github.com/winnie430/ca2024fhw05/">https://github.com/winnie430/ca2024fhw05/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>心得報告 105 字。歌曲名稱+歌手。</p>
       <hr>
       <!-- hw05: 評分表 -->
       <table>
         <tr><th>分數</th><th>完成後打勾</th><th>配分</th><th>分項描述</th></tr>
         <tr><td rowspan="5" id="myTotal5"></td>
-            <td><input type="checkbox" class="flipswitch" id="myCheckbox51"></td><td id='m51'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox52"></td><td id='m52'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53"></td><td id='m53'>2</td><td>Medium baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54"></td><td id='m54'>2</td><td>Medium baseline - 描述 </td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox55"></td><td id='m55'>2</td><td>Strong baseline - 描述 </td></tr>
+            <td><input type="checkbox" class="flipswitch" id="myCheckbox51" checked></td><td id='m51'>2</td><td>Simple baseline - Donate功能</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox52" checked></td><td id='m52'>2</td><td>Simple baseline - 動作選單功能</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53"></td><td id='m53'>2</td><td>Medium baseline - 歌曲演唱</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54"></td><td id='m54'>2</td><td>Medium baseline - 自製背景音樂</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox55" checked></td><td id='m55'>2</td><td>Strong baseline - 將角色模型替換成其他角色模型</td></tr>
       </table>
       <!-- hw05: 評分表 -->
     </div>
@@ -407,17 +407,17 @@
       <hr>
       <p>作業六倉儲 <a href="https://github.com/winnie430/ca2024fhw06/">https://github.com/winnie430/ca2024fhw06/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>心得報告 105 字。歌曲名稱+歌手。感謝XXX提供動捕動作。</p>
       <hr>
       <!-- hw06: 評分表 -->
       <table>
         <tr><th>分數</th><th>完成後打勾</th><th>配分</th><th>分項描述</th></tr>
         <tr><td rowspan="5" id="myTotal6"></td>
-            <td><input type="checkbox" class="flipswitch" id="myCheckbox61"></td><td id='m61'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62"></td><td id='m62'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox63"></td><td id='m63'>2</td><td>Medium baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox64"></td><td id='m64'>2</td><td>Medium baseline - 描述 </td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65"></td><td id='m65'>2</td><td>Strong baseline - 描述 </td></tr>
+            <td><input type="checkbox" class="flipswitch" id="myCheckbox61"></td><td id='m61'>2</td><td>Simple baseline - VRoid VRM 匯入 Unity</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62"></td><td id='m62'>2</td><td>Simple baseline - 錄製動作 FBX 匯入 Unity</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox63"></td><td id='m63'>2</td><td>Medium baseline - Unity 場景搭建</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox64"></td><td id='m64'>2</td><td>Medium baseline - 加入至少三個分鏡</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65"></td><td id='m65'>2</td><td>Strong baseline - 背景音樂 bgm & 唱歌</td></tr>
         <!-- <tr><td colspan="4"> <a href="https://github.com/tjhsieh/ca2024fhw06/">前往作業六 GitHub 倉儲 「ca2024fhw06」</a> </td></tr> <!-- 「Repository 託管程式碼空間」 -->
       </table>
       <!-- hw06: 評分表 -->
