--- a/index.html
+++ b/index.html
@@ -388,15 +388,15 @@
         <tr><td rowspan="5" id="myTotal5"></td>
             <td><input type="checkbox" class="flipswitch" id="myCheckbox51" checked></td><td id='m51'>2</td><td>Simple baseline - Donate功能</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox52" checked></td><td id='m52'>2</td><td>Simple baseline - 動作選單功能</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53"></td><td id='m53'>2</td><td>Medium baseline - 歌曲演唱</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54"></td><td id='m54'>2</td><td>Medium baseline - 自製背景音樂</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53" checked></td><td id='m53'>2</td><td>Medium baseline - 歌曲演唱</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54" checked></td><td id='m54'>2</td><td>Medium baseline - 自製背景音樂</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox55" checked></td><td id='m55'>2</td><td>Strong baseline - 將角色模型替換成其他角色模型</td></tr>
       </table>
       <!-- hw05: 評分表 -->
     </div>
     <div class="col-md-7 twenty">
       <!-- 作業五影片製作完畢，上傳到 YouTube 之後，記得鑲嵌你的 YouTube 影片到這裡 -->
-      <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/X9bLW8Ru7CE?si=dM-p8SK-TGvysLnl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   
@@ -413,18 +413,17 @@
       <table>
         <tr><th>分數</th><th>完成後打勾</th><th>配分</th><th>分項描述</th></tr>
         <tr><td rowspan="5" id="myTotal6"></td>
-            <td><input type="checkbox" class="flipswitch" id="myCheckbox61"></td><td id='m61'>2</td><td>Simple baseline - VRoid VRM 匯入 Unity</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62"></td><td id='m62'>2</td><td>Simple baseline - 錄製動作 FBX 匯入 Unity</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox63"></td><td id='m63'>2</td><td>Medium baseline - Unity 場景搭建</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox64"></td><td id='m64'>2</td><td>Medium baseline - 加入至少三個分鏡</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65"></td><td id='m65'>2</td><td>Strong baseline - 背景音樂 bgm & 唱歌</td></tr>
-        <!-- <tr><td colspan="4"> <a href="https://github.com/tjhsieh/ca2024fhw06/">前往作業六 GitHub 倉儲 「ca2024fhw06」</a> </td></tr> <!-- 「Repository 託管程式碼空間」 -->
+            <td><input type="checkbox" class="flipswitch" id="myCheckbox61" checked></td><td id='m61'>2</td><td>Simple baseline - VRoid VRM 匯入 Unity</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62" checked></td><td id='m62'>2</td><td>Simple baseline - 錄製動作 FBX 匯入 Unity</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox63" checked></td><td id='m63'>2</td><td>Medium baseline - Unity 場景搭建</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox64" checked></td><td id='m64'>2</td><td>Medium baseline - 加入至少三個分鏡</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65" checked></td><td id='m65'>2</td><td>Strong baseline - 背景音樂 bgm & 唱歌</td></tr>
       </table>
       <!-- hw06: 評分表 -->
     </div>
     <div class="col-md-7 twenty">
       <!-- 作業六影片製作完畢，上傳到 YouTube 之後，記得鑲嵌你的 YouTube 影片到這裡 -->
-      <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/C0lQvu4OgOs?si=8N_866aYUz_gcA9O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   
