--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
       <hr>
       <p>作業五倉儲 <a href="https://github.com/winnie430/ca2024fhw05/">https://github.com/winnie430/ca2024fhw05/</a></p>
       <hr>
-      <p>心得報告 105 字。歌曲名稱+歌手。</p>
+      <p>歌曲：僕は...，歌手：あたらよ。</p>
+      <p>本次作業為修改已有的Unity範本，並直播Unity畫面+自己唱歌。其中我把角色模型替換成自己捏得VRM模型，完成Donate按鈕功能，然後把背景圖片替換成從Unsplash網站上找的圖片。</p>
       <hr>
       <!-- hw05: 評分表 -->
       <table>
@@ -407,7 +408,8 @@
       <hr>
       <p>作業六倉儲 <a href="https://github.com/winnie430/ca2024fhw06/">https://github.com/winnie430/ca2024fhw06/</a></p>
       <hr>
-      <p>心得報告 105 字。歌曲名稱+歌手。感謝XXX提供動捕動作。</p>
+      <p>歌曲：僕は...，歌手：あたらよ，感謝陳同學提供動捕動作。</p>
+      <p>本次作業是利用Unity拍攝虛擬人物的演唱會，除了要搭建場景、自己唱歌以外，最花時間的部分就是要自己設定分鏡，最後做出來的攝影機軌道像雲霄飛車軌道般上上下下的很有趣 XD</p>
       <hr>
       <!-- hw06: 評分表 -->
       <table>
