Update hw06 experience.

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
       <hr>
       <p>作業六倉儲 <a href="https://github.com/winnie430/ca2024fhw06/">https://github.com/winnie430/ca2024fhw06/</a></p>
       <hr>
-      <p>歌曲：僕は...，歌手：あたらよ，感謝陳同學提供動捕動作。</p>
+      <p>歌曲：僕は...，歌手：あたらよ，感謝陳同學提供動作。</p>
       <p>本次作業是利用Unity拍攝虛擬人物的演唱會，除了要搭建場景、自己唱歌以外，最花時間的部分就是要自己設定分鏡，最後做出來的攝影機軌道像雲霄飛車軌道般上上下下的很有趣 XD</p>
       <hr>
       <!-- hw06: 評分表 -->
